--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="main-header">
         <h1 class="main-header-title">BitBenders</h1>
-        <p class="main-header-subtitle">Help moms learn and gain more access to sustainability to enhance their lifestyle and daily routine.</p>
+        <p class="main-header-subtitle">Help first-time moms learn and gain more access to sustainability to enhance their lifestyle and daily routine.</p>
         <p class="main-header-body">Team : Aayahna Herbert, Akash Talyan, Doris Amouzou, Rishivanth Thulasiraman</p>
     </div>
     <div class="toc">
